# cpu-sparse-experiments

./: .gitignore  AUTHORS  Cargo.toml
.github/workflows/: main.yml
crates/bench_gen/: Cargo.toml  README.md
crates/bench_gen/assets/: README.md  butterfly.txt  dragon.txt  fish.txt  world.txt
crates/bench_gen/src/: lib.rs  main.rs
crates/c_api/: Cargo.toml  run.sh
crates/c_api/src/: lib.rs
crates/sparse_primitives/: Cargo.toml
crates/sparse_primitives/benches/: fill.rs  filling.rs  main.rs  render_strips.rs  sorting.rs  strip.rs  tiling.rs
crates/sparse_primitives/benches/assets/: coat_of_arms_fills.txt  coat_of_arms_strokes.txt  gs_tiger_fills.txt  gs_tiger_strokes.txt
crates/sparse_primitives/examples/: bench.rs  debug.rs  resvg.rs  simple.rs  svg.rs
crates/sparse_primitives/src/: dispatcher.rs  execute.rs  fine.rs  flatten.rs  lib.rs  paint.rs  pattern.rs  pixmap.rs  rect.rs  render.rs  strip.rs  svg.rs  tiling.rs  util.rs  wide_tile.rs
crates/sparse_primitives/src/fine/: avx2.rs  compose.rs  mod.rs  neon.rs  scalar.rs
crates/sparse_primitives/tests/: basic.rs  issues.rs  util.rs
examples/: bench.rs  debug.rs  resvg.rs  simple.rs  svg.rs  tiny_skia.rs
src/: fine.rs  flatten.rs  lib.rs  paint.rs  pattern.rs  pixmap.rs  rect.rs  render.rs  simd.rs  strip.rs  svg.rs  tiling.rs  wide_tile.rs
src/simd/: mod.rs  neon.rs
tests/: basic.rs  issues.rs  util.rs
