[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>", "Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
keywords = ["graphics", "2d"]
categories = ["graphics"]

[workspace.dependencies]
peniko = "0.3.0"
flatten = { git = "https://github.com/linebender/gpu-stroke-expansion-paper", rev = "827ccf6" }
bench_gen = { path = "crates/bench_gen" }
sparse_primitives = { path = "crates/sparse_primitives" }
svg = "0.18.0"
rand = "0.8.5"
usvg = "0.44.0"
resvg = "0.44.0"
zune-png = "0.4.10"
oxipng = "9.1.3"
png = "0.17.14"
once_cell = "1.20.2"
roxmltree = "0.20.0"
image = "0.25.5"
tiny-skia = {version = "0.11.4", features = ["png", "simd"]}
criterion = { version = "0.4", features = ["html_reports"] }

# Cargo warns that this is unnecessary, but for some reason if I remove this
# and run an example from sparse_primitives the names still seem to disappear, so
# so we keep this for now.
[profile.release]
debug = true

[patch.crates-io]
kurbo = { path = "../kurbo"}
