[package]
name = "c_api"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
sparse_primitives = { path = "../sparse_primitives", features = ["simd"] }