[package]
name = "sparse_primitives"
edition = "2021"

[dependencies]
peniko = {workspace = true}
flatten = { workspace = true }
zune-png = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }

[dev-dependencies]
oxipng = { workspace = true }
png = { workspace = true }
once_cell = { workspace = true }
roxmltree = { workspace = true }
image = { workspace = true }
tiny-skia = { workspace = true }
bench_gen = { workspace = true }
svg = { workspace = true }
rand = { workspace = true }

[features]
simd = []

[profile.release]
debug = true