[package]
name = "sparse_primitives"
edition = "2021"

[dependencies]
vello_common = { workspace = true, features = ["simd"] }

[[bench]]
name = "main"
harness = false

[dev-dependencies]
oxipng = { workspace = true }
png = { workspace = true }
once_cell = { workspace = true }
image = { workspace = true }
bench_gen = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[features]
simd = []